--- a/app/src/main/res/layout/activity_found_form.xml
+++ b/app/src/main/res/layout/activity_found_form.xml
@@ -36,10 +36,12 @@
 
             <LinearLayout
                 android:id="@+id/linearLayout"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
-                android:layout_marginBottom="50dp"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginBottom="30dp"
+                android:paddingBottom="50dp"
                 android:background="@color/semi_transparent"
                 android:elevation="4dp"
                 android:orientation="vertical"
@@ -50,10 +52,12 @@
 
                 <EditText
                     android:id="@+id/foundItemName"
-                    android:layout_width="280dp"
-                    android:layout_height="65dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="20dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:padding="15dp"
                     android:background="@drawable/rounded_edittext"
                     android:ems="10"
                     android:hint="Name of item"
@@ -65,10 +69,12 @@
 
                 <Spinner
                     android:id="@+id/spinner"
-                    android:layout_width="280dp"
-                    android:layout_height="60dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="35dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:padding="10dp"
                     android:background="@drawable/rounded_edittext"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -76,10 +82,12 @@
 
                 <EditText
                     android:id="@+id/foundDate"
-                    android:layout_width="280dp"
-                    android:layout_height="60dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="35dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:padding="15dp"
                     android:background="@drawable/rounded_edittext"
                     android:clickable="true"
                     android:ems="10"
@@ -88,25 +96,29 @@
                     android:inputType="none"
                     android:paddingLeft="7dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.502"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
                 <TextView
                     android:id="@+id/dateError"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:padding="15dp"
                     android:textColor="@android:color/holo_red_dark"
                     android:textSize="14sp"
                     android:visibility="gone"/>
 
                 <EditText
                     android:id="@+id/foundItemLocation"
-                    android:layout_width="280dp"
-                    android:layout_height="60dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="35dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:padding="15dp"
                     android:background="@drawable/rounded_edittext"
                     android:ems="10"
                     android:hint="Location Found"
@@ -118,10 +130,13 @@
 
                 <EditText
                     android:id="@+id/foundItemDescription"
-                    android:layout_width="280dp"
-                    android:layout_height="150dp"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="35dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="150dp"
+                    android:maxHeight="200dp"
+                    android:layout_gravity="left"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginHorizontal="10dp"
                     android:layout_marginBottom="20dp"
                     android:background="@drawable/rounded_edittext"
                     android:ems="10"
@@ -129,7 +144,8 @@
                     android:hint="Enter description of item here"
                     android:inputType="textMultiLine"
                     android:paddingVertical="10dp"
-                    android:paddingLeft="7dp"
+                    android:paddingHorizontal="15dp"
+                    android:paddingBottom="15dp"
                     android:scrollbars="vertical"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -137,13 +153,14 @@
 
             <FrameLayout
                 android:id="@+id/frameLayout2"
-                android:layout_width="280dp"
+                android:layout_width="match_parent"
                 android:layout_height="@dimen/fixed_frame_height"
+                android:minHeight="180dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="35dp"
+                android:layout_marginTop="20dp"
                 android:background="#ffffff"
+                android:layout_marginHorizontal="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.502"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
