--- a/app/src/main/res/layout/activity_lost_form.xml
+++ b/app/src/main/res/layout/activity_lost_form.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -36,23 +37,29 @@
 
             <LinearLayout
                 android:id="@+id/linearLayout"
-                android:layout_width="325dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginBottom="30dp"
+                android:paddingBottom="50dp"
                 android:background="@color/semi_transparent"
                 android:elevation="4dp"
                 android:orientation="vertical"
                 android:padding="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/header">
+                app:layout_constraintTop_toBottomOf="@+id/header"
+                app:layout_constraintBottom_toBottomOf="parent">
 
                 <EditText
                     android:id="@+id/lostItemName"
-                    android:layout_width="280dp"
-                    android:layout_height="65dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="20dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:padding="15dp"
                     android:background="@drawable/rounded_edittext"
                     android:ems="10"
                     android:hint="Name of item"
@@ -64,10 +71,12 @@
 
                 <Spinner
                     android:id="@+id/spinner"
-                    android:layout_width="280dp"
-                    android:layout_height="60dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="35dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:padding="10dp"
                     android:background="@drawable/rounded_edittext"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -75,10 +84,12 @@
 
                 <EditText
                     android:id="@+id/lostDate"
-                    android:layout_width="280dp"
-                    android:layout_height="60dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="35dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:padding="15dp"
                     android:background="@drawable/rounded_edittext"
                     android:clickable="true"
                     android:ems="10"
@@ -87,25 +98,29 @@
                     android:inputType="none"
                     android:paddingLeft="7dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.502"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
                 <TextView
                     android:id="@+id/dateError"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:padding="15dp"
                     android:textColor="@android:color/holo_red_dark"
                     android:textSize="14sp"
                     android:visibility="gone" />
 
                 <EditText
                     android:id="@+id/lostItemLocation"
-                    android:layout_width="280dp"
-                    android:layout_height="60dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="35dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:padding="15dp"
                     android:background="@drawable/rounded_edittext"
                     android:ems="10"
                     android:hint="Set Location"
@@ -117,10 +132,13 @@
 
                 <EditText
                     android:id="@+id/lostItemDescription"
-                    android:layout_width="280dp"
-                    android:layout_height="150dp"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="35dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="150dp"
+                    android:maxHeight="200dp"
+                    android:layout_gravity="left"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginHorizontal="10dp"
                     android:layout_marginBottom="20dp"
                     android:background="@drawable/rounded_edittext"
                     android:ems="10"
@@ -128,22 +146,23 @@
                     android:hint="Enter description of item here"
                     android:inputType="textMultiLine"
                     android:paddingVertical="10dp"
-                    android:paddingLeft="7dp"
+                    android:paddingHorizontal="15dp"
+                    android:paddingBottom="15dp"
                     android:scrollbars="vertical"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/location" />
 
-
                 <FrameLayout
                     android:id="@+id/frameLayout2"
-                    android:layout_width="280dp"
+                    android:layout_width="match_parent"
                     android:layout_height="@dimen/fixed_frame_height"
+                    android:minHeight="180dp"
                     android:layout_gravity="center"
-                    android:layout_marginTop="35dp"
+                    android:layout_marginTop="20dp"
                     android:background="#ffffff"
+                    android:layout_marginHorizontal="10dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.502"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
