--- a/app/src/main/res/layout/activity_ongoing.xml
+++ b/app/src/main/res/layout/activity_ongoing.xml
@@ -28,7 +28,7 @@
                 android:text="Ongoing:"
                 android:textColor="#FFFFFF"
                 android:textSize="20dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="35dp"
                 android:layout_marginLeft="40dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -40,9 +40,8 @@
                 android:text="69"
                 android:textColor="#FFFFFF"
                 android:textSize="20dp"
-                android:layout_marginTop="20dp"
-                app:layout_constraintHorizontal_bias="0.05"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="35dp"
+                android:layout_marginLeft="5dp"
                 app:layout_constraintStart_toEndOf="@+id/ongoing"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -87,16 +86,19 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:padding="16dp"
+                android:layout_marginBottom="50dp"
                 app:layout_constraintTop_toBottomOf="@id/found"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent" />
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#ffffff"
+        android:background="#000000"
         android:orientation="horizontal">
 
         <Button
@@ -104,8 +106,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:backgroundTint="@color/black"
+            android:backgroundTint="#000000"
             android:text="Back"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white" />
     </LinearLayout>
 </LinearLayout>
