--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -26,12 +26,12 @@
                 android:id="@+id/summaryTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="35dp"
                 android:text="Summary of found item:"
                 android:textColor="#FFFFFF"
                 android:textSize="30dp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -46,7 +46,6 @@
                 android:background="@color/semi_transparent"
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/summaryTextView">
 
@@ -61,7 +60,6 @@
                     android:textColor="#FFFFFF"
                     android:textSize="25dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.151"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -76,7 +74,6 @@
                     android:textColor="#FFFFFF"
                     android:textSize="25dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.151"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/itemTextView" />
 
@@ -91,7 +88,6 @@
                     android:textColor="#FFFFFF"
                     android:textSize="25dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.13"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/categoryTextView" />
 
@@ -106,7 +102,6 @@
                     android:textColor="#FFFFFF"
                     android:textSize="25dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.149"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/dateTextView" />
 
@@ -122,35 +117,37 @@
                     android:textColor="#FFFFFF"
                     android:textSize="25dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.149"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/locationTextView" />
             </LinearLayout>
 
             <TextView
                 android:id="@+id/photoTextView"
-                android:layout_width="364dp"
-                android:layout_height="35dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:text="Photo:"
                 android:textColor="#FFFFFF"
                 android:textSize="25dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginHorizontal="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/detailsContainer" />
 
             <FrameLayout
                 android:id="@+id/frameLayout2"
-                android:layout_width="280dp"
+                android:layout_width="match_parent"
                 android:layout_height="@dimen/fixed_frame_height"
+                android:minHeight="180dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="40dp"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginBottom="50dp"
                 android:background="#ffffff"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.494"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/photoTextView">
+                app:layout_constraintTop_toBottomOf="@id/photoTextView"
+                app:layout_constraintBottom_toBottomOf="parent">
 
             <TextView
                 android:id="@+id/noImageText"
